crates/solidity-v2/testing/snapshots/binder_output/contracts/overloaded_named_arguments_selected/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
[type-system/cannot-call-via-contract-type-name] Error: Cannot call function via contract type name.
    ╭─[input.sol:13:9]
    │
 13 │         A.f({b: true});
    │         ───────┬──────  
    │                ╰──────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (7):
- Def: #1 ["A" @ input.sol:4:10] (contract)
- Def: #2 ["f" @ input.sol:5:14] (function, type: function (uint256) returns void)
- Def: #3 ["x" @ input.sol:5:21] (parameter, type: uint256)
- Def: #4 ["f" @ input.sol:6:14] (function, type: function (bool) returns void)
- Def: #5 ["b" @ input.sol:6:21] (parameter, type: bool)
- Def: #6 ["B" @ input.sol:9:10] (contract)
- Def: #7 ["g" @ input.sol:10:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (3):
- Ref: ["A" @ input.sol:13:9] -> #1
- Ref: ["f" @ input.sol:13:11] -> #4
- Ref: ["b" @ input.sol:13:14] -> #5

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  4 │ contract A {
    │          ┬  
    │          ╰── name: 1
  5 │     function f(uint x) external {}
    │              ┬      ┬  
    │              ╰───────── name: 2
    │                     │  
    │                     ╰── name: 3
  6 │     function f(bool b) external {}
    │              ┬      ┬  
    │              ╰───────── name: 4
    │                     │  
    │                     ╰── name: 5
    │ 
  9 │ contract B {
    │          ┬  
    │          ╰── name: 6
 10 │     function g() public {
    │              ┬  
    │              ╰── name: 7
    │ 
 13 │         A.f({b: true});
    │         ┬ ┬  ┬  
    │         ╰─────── ref: 1
    │           │  │  
    │           ╰───── ref: 4
    │              │  
    │              ╰── ref: 5
────╯
